--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   },
   "homepage": "https://github.com/szz-dvl/images#readme",
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/lodash": "^4.17.4",
+    "@types/node": "^20.12.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.3",
     "typescript": "^5.4.5"
   },
   "dependencies": {
