--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "glob": "^10.4.1",
     "lodash": "^4.17.21",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "ts-results": "^3.3.0"
   }
 }
