--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "glob": "^10.4.1",
     "lodash": "^4.17.21",
     "sharp": "^0.33.4",
-    "ts-results": "^3.3.0"
+    "ts-results": "^3.3.0",
+    "tslib": "^2.6.2"
   }
 }
