--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@jest/globals": "^29.7.0",
     "@types/lodash": "^4.17.4",
     "@types/node": "^20.12.12",
+    "express": "^4.19.2",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.3",
     "typescript": "^5.4.5"
