--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/lodash": "^4.17.4",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.12.12",
     "express": "^4.19.2",
     "jest": "^29.7.0",
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.21",
     "glob": "^10.4.1",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "sharp": "^0.33.4",
     "ts-results": "^3.3.0",
     "tslib": "^2.6.2"
