--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
   },
   "homepage": "https://github.com/szz-dvl/images#readme",
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
     "@jest/globals": "^29.7.0",
     "@types/lodash": "^4.17.4",
     "@types/md5": "^2.3.5",
     "@types/node": "^20.12.12",
+    "eslint": "^9.4.0",
     "express": "^4.19.2",
+    "globals": "^15.3.0",
     "jest": "^29.7.0",
+    "prettier": "3.2.5",
     "ts-jest": "^29.1.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.11.0"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
