--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "images",
+  "name": "@szz_dev/images",
   "version": "1.0.0",
   "description": "NPM package to expose sharp functionalities trough express middleware.",
   "main": "dist/index.js",
