--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@szz_dev/images",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "NPM package to expose sharp functionalities trough express middleware.",
   "main": "dist/index.js",
+  "types": "images.d.ts",
   "scripts": {
     "test": "npx jest",
     "lint": "npx eslint --config eslint.config.mjs src",
