fix: spec composition

--- a/spec.yaml
+++ b/spec.yaml
@@ -103,6 +103,10 @@
             - char
             - none
       - in: query
+        name: text.rgba
+        schema:
+          type: boolean
+      - in: query
         name: resize.width
         schema:
           type: number
@@ -699,3 +703,149 @@
         name: customAfter
         schema:
           type: string
+      - in: query
+        name: composite.0
+        schema:
+          type: string
+      - in: query
+        name: composite.0.blend
+        schema:
+          type: string
+          enum:
+            - clear
+            - source
+            - over
+            - in
+            - out
+            - atop
+            - dest
+            - dest-over
+            - dest-in
+            - dest-out
+            - dest-atop
+            - xor
+            - add
+            - saturate
+            - multiply
+            - screen
+            - overlay
+            - darken
+            - lighten
+            - colour-dodge
+            - color-dodge
+            - colour-burn
+            - color-burn
+            - hard-light
+            - soft-light
+            - difference
+            - exclusion
+      - in: query
+        name: composite.0.gravity
+        schema:
+          type: string
+          enum:
+            - center
+      - in: query
+        name: composite.0.create.top
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.left
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.density
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.tile
+        schema:
+          type: boolean
+      - in: query
+        name: composite.0.create.premultiplied
+        schema:
+          type: boolean
+      - in: query
+        name: composite.0.create.width
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.height
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.channels
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.background
+        schema:
+          type: string
+          pattern: "^#[0-9A-F]{6}$"
+      - in: query
+        name: composite.0.create.noise.type
+        schema:
+          type: string
+          enum:
+            - gaussian
+      - in: query
+        name: composite.0.create.noise.mean
+        schema:
+          type: number
+      - in: query
+        name: composite.0.create.noise.sigma
+        schema:
+          type: number
+      - in: query
+        name: composite.0.text.width
+        schema:
+          type: number
+      - in: query
+        name: composite.0.text.height
+        schema:
+          type: number
+      - in: query
+        name: composite.0.text.text
+        schema:
+          type: string
+      - in: query
+        name: composite.0.text.font
+        schema:
+          type: string
+      - in: query
+        name: composite.0.text.fontfile
+        schema:
+          type: string
+      - in: query
+        name: composite.0.text.align
+        schema:
+          type: string
+          enum:
+            - left
+            - center
+            - right
+      - in: query
+        name: composite.0.text.justify
+        schema:
+          type: boolean
+      - in: query
+        name: composite.0.text.dpi
+        schema:
+          type: number
+      - in: query
+        name: composite.0.text.spacing
+        schema:
+          type: number
+      - in: query
+        name: composite.0.text.wrap
+        schema:
+          type: string
+          enum:
+            - word
+            - word-char
+            - char
+            - none
+      - in: query
+        name: composite.0.text.rgba
+        schema:
+          type: boolean
