--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "md5": "^2.3.0",
     "sharp": "^0.33.4",
     "ts-results": "^3.3.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "undici": "^7.16.0"
   }
 }
